// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EksternLenke/> skal ikke padde href med protokoll, http 1`] = `
<Lenke
  href="http://nav.no"
>
  http://nav.no
  <ForwardRef(SvgEksternLenke) />
</Lenke>
`;

exports[`<EksternLenke/> skal ikke padde href med protokoll, https 1`] = `
<Lenke
  href="https://nav.no"
>
  https://nav.no
  <ForwardRef(SvgEksternLenke) />
</Lenke>
`;

exports[`<EksternLenke/> skal padde href med protokoll når det mangler 1`] = `
<Lenke
  href="http://nav.no"
>
  nav.no
  <ForwardRef(SvgEksternLenke) />
</Lenke>
`;

exports[`<EksternLenke/> skal padde href med protokoll når det mangler, www 1`] = `
<Lenke
  href="http://www.nav.no"
>
  www.nav.no
  <ForwardRef(SvgEksternLenke) />
</Lenke>
`;
